Made a python webscraper file from notebook

--- a/TextGenerationNotebook/Web Scraper.ipynb
+++ b/TextGenerationNotebook/Web Scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +26,107 @@
    "metadata": {},
    "source": [
     "### Grade 3 - Kagero"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "URL = \"https://cardfight.fandom.com/wiki/Kagero_(V_Series)\"\n",
+    "r = requests.get(URL) \n",
+    "\n",
+    "soup = BeautifulSoup(r.content, 'html5lib') \n",
+    "\n",
+    "# Finding a h3 with the content of grade 3\n",
+    "grade3 = soup.find_all(\"h3\", string=\"Grade 3\")\n",
+    "\n",
+    "# We are going to store information here\n",
+    "card_links = []\n",
+    "for header in soup.find_all('h3', string=\"Grade 3\"):\n",
+    "    nextNode = header\n",
+    "    while True:\n",
+    "        nextNode = nextNode.nextSibling\n",
+    "        if nextNode is None:\n",
+    "            break\n",
+    "        if isinstance(nextNode, Tag):\n",
+    "            if nextNode.name == \"h3\":\n",
+    "                break\n",
+    "            card_links.append(nextNode)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cards = []\n",
+    "for row in card_links[0].findAll('tr'):\n",
+    "    if type(row) != None:\n",
+    "        cards.append(row.find('td'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cards_a_attr = []\n",
+    "for link in cards:\n",
+    "    if link != None:\n",
+    "        cards_a_attr.append(link.find('a', href=True)['href'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/wiki/Blazing_Flare_Dragon_(V_Series)',\n",
+       " '/wiki/Crested_Dragon_(V_Series)',\n",
+       " '/wiki/Crested_Dragon_(V_Series_Start_Deck)',\n",
+       " '/wiki/Cruel_Dragon_(V_Series)',\n",
+       " '/wiki/Dauntless_Dominate_Dragon_%22%D0%AFeverse%22_(V_Series)',\n",
+       " '/wiki/Dauntless_Drive_Dragon_(V_Series)',\n",
+       " '/wiki/Dragon_Dancer,_Nastasha',\n",
+       " '/wiki/Dragon_Knight,_Ishaq',\n",
+       " '/wiki/Dragon_Knight,_Nizari',\n",
+       " '/wiki/Dragonic_Blademaster_(V_Series)',\n",
+       " '/wiki/Dragonic_Blademaster_%22Souen%22',\n",
+       " '/wiki/Dragonic_Lawkeeper_(V_Series)',\n",
+       " '/wiki/Dragonic_Overlord_(V_Series)',\n",
+       " '/wiki/Dragonic_Overlord_the_End_(V_Series)',\n",
+       " '/wiki/Dragonic_Overlord_the_Great',\n",
+       " '/wiki/Dragonic_Overlord_%22The_TurnAbout%22',\n",
+       " '/wiki/Dragonic_Overlord_%22The_Victory%22',\n",
+       " '/wiki/Dragonic_Overlord_%22The_X%22_(V_Series)',\n",
+       " '/wiki/Dragonic_Waterfall_(V_Series)',\n",
+       " '/wiki/Dual_Axe_Archdragon_(V_Series)',\n",
+       " '/wiki/Exile_Dragon_(V_Series)',\n",
+       " '/wiki/Exotic_Dragnal_Armor',\n",
+       " '/wiki/Fire_Rage_Dragon',\n",
+       " '/wiki/Lava_Blast_Dragon',\n",
+       " '/wiki/Oddness-ardor_Dragon',\n",
+       " '/wiki/Seal_Dragon,_Blockade_(V_Series)',\n",
+       " '/wiki/Shine_Bardiche_Dragon',\n",
+       " '/wiki/Vortex_Dragon_(V_Series)',\n",
+       " '/wiki/Wyvern_Strike,_Agaruda',\n",
+       " '/wiki/Wyvern_Strike,_Agaruda_(V_Series_Start_Deck)']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cards_a_attr"
    ]
   },
   {
